--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "exe": "electron-packager ."
+    "dmg": "appdmg ./build/appdmg.json ~/Desktop/test99.dmg"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -25,12 +25,11 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "electron": "11.4.5",
-    "electron-packager": "15.2.0",
-    "install": "^0.13.0"
+    "electron": "15.4.0",
+    "install": "^0.13.0",
+    "appdmg": "^0.6.2"
   },
   "dependencies": {
-    "appdmg": "^0.6.2",
     "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
