--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "dmg": "appdmg ./build/appdmg.json ~/Desktop/myapp.dmg"
+    "dmg": "electron-installer-dmg ./out/electron-quick-start-darwin-x64/electron-quick-start.app myapp"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -26,8 +26,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "electron": "15.4.0",
-    "install": "^0.13.0",
-    "appdmg": "^0.6.2"
+    "electron-installer-dmg": "^3.0.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
