--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "dmg": "electron-installer-dmg ./out/myapp-darwin-x64/myapp.app myapp"
+    "dmg": "electron-installer-dmg ./out/myapp-darwin-x64/myapp.app ./out/myapp"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
